Fix mobile search bar width overflow

--- a/src/styles/SearchPage.css
+++ b/src/styles/SearchPage.css
@@ -506,7 +506,6 @@ input[type="checkbox"] {
   .top-left {
     gap: 8px;
     width: 100%;
-    justify-content: center;
   }
 
   .top-search {
@@ -515,7 +514,6 @@ input[type="checkbox"] {
     align-items: center;
     padding: 0 4px;
     gap: 14px;
-    position: fixed;
   }
 
   .hamburger-btn {
